<resources>
    <string name="app_name">Shop Assist</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fav_title">Product Name:</string>
    <string name="fav_sub">Product Sub category:</string>
    <string name="compare">Compare</string>
    <string name="create">Create</string>
    <string name="add_products">Add Products</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="no_fav">No Favourite items to display</string>
    <string name="no_shopping_lists">No Shopping List items to display</string>
    <string name="shopping_list_name">Shopping List Name:</string>
    <string name="no_products_in_shopping_list">Please add products</string>
    <string name="delete">Delete</string>
    <string name="about_us">Five individuals with a passion for creativity</string>
    <string name="help_and_documentation">This document is to provide instructions to use Shop Assist. For further assistance drop a mail to support@shopassit.com</string>
    <string name="comparison_results">Comparison Results</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="filter">Filter</string>
    <string name="save_shopping_list">Save Shopping List</string>
    <string name="view_shopping_list">View Shopping List</string>
    <string name="amount">Amount</string>
    <string name="store">Store</string>
    <string name="answer">Answer</string>

</resources>
