<?xml version="1.0" encoding="utf-8"?>
<com.application.shopassist.ExpandableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expand_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/question_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/store_textview"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF"
            android:gravity="start"
            android:padding="4dp"
            android:text="@string/store"
            android:textAlignment="center"
            android:textColor="#515050"
            android:textSize="18sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@id/divider8"
            app:layout_constraintEnd_toStartOf="@+id/amount_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/amount_textview"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:drawableRight="@drawable/drop_down2"
            android:padding="4dp"
            android:text="@string/amount"
            android:textAlignment="textStart"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/divider8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider7"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider7"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@id/divider8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/store_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider8"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/divider7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/answer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/store_textview"
        android:background="#E8E8E8"
        android:padding="10dp">

        <TextView
            android:id="@+id/prod_amount_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/answer"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </LinearLayout>


</com.application.shopassist.ExpandableLayout>